--- a/tso/Dockerfile
+++ b/tso/Dockerfile
@@ -4,7 +4,9 @@ WORKDIR /app
 
 COPY ["package.json", "package-lock.json*", "./"]
 
-ENV REDIS_HOST=redis
+ENV BROKER=kafka
+ENV BROKER_URL=20.229.248.72
+ENV BROKER_PORT=9092
 
 RUN npm install --production
 
