--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,7 +49,7 @@ services:
     depends_on:
       - kafka
     environment:
-      - ENV_BROKER_URL=kafka:9092
+      - BROKER_URL=kafka:9092
       - BROKER=KAFKA
     networks:
       - mvp-network
