feat: flink image and pipeline

--- a/energy-balancing-coordinator/Dockerfile
+++ b/energy-balancing-coordinator/Dockerfile
@@ -1,1 +1,3 @@
-FROM flink:scala_2.12-java8
+FROM flink
+RUN mkdir -p $FLINK_HOME/usrlib
+COPY /target/energy-balancing-coordinator-1.0-SNAPSHOT.jar $FLINK_HOME/usrlib/energy-balancing-coordinator-1.0-SNAPSHOT.jar
