--- a/tso/package.json
+++ b/tso/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "test",
     "start": "node main.js",
-    "simulate": "node pmu_measurement.js",
-    "sim2": "node pmu_new.js"
+    "simulate": "node measurements/pmu_measurement.js",
+    "sudden": "node measurements/data/sudden-change.js"
   },
   "author": "",
   "license": "ISC",
