--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -140,6 +140,7 @@ services:
       - PACKET_TIME_S=30
       - UPPER_BOUND_BATTERY_CAPACITY=0.8
       - LOWER_BOUND_BATTERY_CAPACITY=0.2
+      - KAFKA_OFFSET_COMMIT_INTERVAL_MILLIS=1000
     networks:
       - mvp-network
 
