feat: updated tso to reset at stabilization

--- a/tso/package.json
+++ b/tso/package.json
@@ -7,7 +7,8 @@
     "test": "test",
     "start": "node main.js",
     "simulate": "node measurements/pmu_measurement.js",
-    "sudden": "node measurements/data/sudden-change.js"
+    "sudden": "node measurements/data/sudden-change.js",
+    "actions": "node battery-actions.js"
   },
   "author": "",
   "license": "ISC",
