--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,11 +15,21 @@
             "type": "node"
         },
         {
+            "name": "TSO-BatteryAction",
+            "program": "${workspaceFolder}/tso/battery-actions.js",
+            "cwd": "${workspaceFolder}/tso",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+        {
             "name": "Battery",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/battery-sim/"
-        }
+        },
     ]
 }
